# dpymenus

./: .gitignore  .pyproject.toml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  build.ps1  build.sh  pyproject.toml  requirements.txt  runner.py  scripts.py  setup.py
.github/workflows/: black.yml  format.yml
assets/: logo.pyxel
docs/: base_menu.rst  button_menu.rst  conf.py  exceptions.rst  hook_event.rst  hook_when.rst  hooks.rst  index.rst  page.rst  paginated_menu.rst  poll.rst  requirements.txt  session.rst  template.rst  text_menu.rst  types.rst
dpymenus/: CHANGELOG.md  __init__.py  auto_paginated_menu.py  base_menu.py  button_menu.py  config.py  exceptions.py  hook.py  hooks.py  menu.py  multiple_choice_menu.py  page.py  paginated_menu.py  poll.py  session.py  session_store.py  sourced_menu.py  template.py  text_menu.py  typevars.py
dpymenus/constants/: __init__.py
dpymenus/menus/: base_menu.py  button_menu.py  paginated_menu.py  poll.py  text_menu.py
dpymenus/pages/: page.py
dpymenus/sessions/: __init__.py  session.py
dpymenus/settings/: __init__.py
dpymenus/types/: __init__.py
examples/: 404_response.json  README.md  button_menu_example.py  event_hooks_example.py  initial_page_override_example.py  menu_chaining_example.py  menu_hooks_example.py  paginated_menu_example.py  paginated_menu_list_example.py  poll_example.py  premade_embed_button_menu_example.py  reaction_buttons_example.py  reloadable_data_example.py  template_example.py  template_field_styles_example.py  text_menu_example.py
examples/.data/: 200_response.json
examples/databases/: README.md  postgres_paginated_menu_example.py  postgres_text_menu_example.py  sqlite_paginated_menu_example.py  sqlite_text_menu_example.py
menus/: menu.py
tests/: test_settings.py
