[tool.poetry]
name = 'dpymenus'
version = '2.0.0'
description = 'Simplified menus for discord.py developers.'
authors = ['Rob Wagner <rob@robwagner.dev>']
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/robertwayne/dpymenus'
repository = 'https://github.com/robertwayne/dpymenus'
keywords = ['discord.py', 'discord bot', 'menus', 'reaction buttons']
classifiers= [
    'Operating System :: OS Independent',
    'Typing :: Typed',
    'Topic :: Communications :: Chat',
    'Intended Audience :: Developers',
    'Development Status :: 5 - Production/Stable',
]

[tool.poetry.scripts]
examples = 'runner:__poetry_run'
fmt = 'scripts:fmt'

[tool.poetry.dependencies]
python = '^3.7'
'discord.py' = '^1.6'
emoji = '1.2.0'

[tool.poetry.dev-dependencies]
cogwatch = '^2.1'
black = '^20.8b1'
python-dotenv = '^0.15'
uvloop = "^0.15"

[tool.black]
line-length = 120
skip-string-normalization = 1
target-version = ['py37']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
    | assets
    | venv
  )/
)
'''

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
