[tool.poetry]
name = 'dpymenus'
version = '2.0.0'
description = 'Simplified menus for discord.py developers.'
authors = ['Rob Wagner <rob@robwagner.dev>']
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/robertwayne/dpymenus'
repository = 'https://github.com/robertwayne/dpymenus'
keywords = ['discord.py', 'discord bot', 'menus', 'reaction buttons']
classifiers= [
    'Operating System :: OS Independent',
    'Typing :: Typed',
    'Topic :: Communications :: Chat',
    'Intended Audience :: Developers',
    'Development Status :: 5 - Production/Stable',
]

[tool.poetry.scripts]
examples = 'runner:__poetry_run'
fmt = 'scripts:fmt'

[tool.poetry.dependencies]
python = '^3.7'
'discord.py' = '^1.6'
tomlkit = "^0.7"
emoji = "^1.2"

[tool.poetry.dev-dependencies]
cogwatch = '^2.1'
black = '^20.8b1'
python-dotenv = '^0.15'
uvloop = "^0.15"
pytest = "^6.2"

[tool.black]
line-length = 120
skip-string-normalization = 1
target-version = ['py37']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
    | assets
    | venv
  )/
)
'''

[dpymenus]
# 0 is no limit / disabled
history-cache-limit = 10
sessions-per-channel = 1
sessions-per-guild = 3
sessions-per-user = 10
session-timeout = 3600
allow-session-restore = false
hide-warnings = false
prevent-multisessions = false
reply-as-default = false
cogwatch-integration = false

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
